src/test/resources/semantic/custom/reject/duplicateFunctionDifferentTypes.ul
void main() {
}

void foo() {
}

boolean foo() {
}